Cycles - Viewport rendering not updating when switching to allready rendered viewlayer #62348

Closed
opened 2019-03-08 10:34:42 +01:00 by Marcus Papathoma · 7 comments

System Information
Operating system: Windows 10 Pro x64
Graphics card: Geforce GTX 1080Ti

Blender Version
Broken: 0ba143a1d6 (todays build)

Short description of error
Viewport rendering not updated when switching to allready rendered viewlayer.
You can switch to a viewlayer once and it is rendered in the viewport. When you go back to an viewlayer you had allready switched before, the viewport is not updating anymore.

Exact steps for others to reproduce the error
Open the attached scene.
Switch to rendered in the viewport.
rendered.JPG
Switch to viewlayer Cube2. The viewport is updating.
change_viewlayer.JPG
Switch back to viewlayer Cube1. The viewport isn´t updating.
change_viewlayer2.JPG
When you switch forward and backward from viewlayer Cube1 to Cube2 nothing happens in the viewport.
cycles_viewport_render_not_updating_when_switching_viewlayer.blend

**System Information** Operating system: Windows 10 Pro x64 Graphics card: Geforce GTX 1080Ti **Blender Version** Broken: 0ba143a1d675 (todays build) **Short description of error** Viewport rendering not updated when switching to allready rendered viewlayer. You can switch to a viewlayer once and it is rendered in the viewport. When you go back to an viewlayer you had allready switched before, the viewport is not updating anymore. **Exact steps for others to reproduce the error** Open the attached scene. Switch to rendered in the viewport. ![rendered.JPG](https://archive.blender.org/developer/F6783685/rendered.JPG) Switch to viewlayer Cube2. The viewport is updating. ![change_viewlayer.JPG](https://archive.blender.org/developer/F6783690/change_viewlayer.JPG) Switch back to viewlayer Cube1. The viewport isn´t updating. ![change_viewlayer2.JPG](https://archive.blender.org/developer/F6783708/change_viewlayer2.JPG) When you switch forward and backward from viewlayer Cube1 to Cube2 nothing happens in the viewport. [cycles_viewport_render_not_updating_when_switching_viewlayer.blend](https://archive.blender.org/developer/F6783714/cycles_viewport_render_not_updating_when_switching_viewlayer.blend)

Added subscriber: @machieb

Added subscriber: @machieb

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Yep, can confirm that, happens here as well.
Sounds very similar to #62320 and #62317.

Yep, can confirm that, happens here as well. Sounds very similar to #62320 and #62317.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

I can confirm this, it has nothing to do with #62320 though. I will try to debug a bit before assigning to someone.

I can confirm this, it has nothing to do with #62320 though. I will try to debug a bit before assigning to someone.

This issue was referenced by 9a49a26eb3

This issue was referenced by 9a49a26eb38ba856664c6215ea62fd77464e72ce

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62348
No description provided.