Fix T62348: Cycles - Viewport rendering not update on switching viewlayer

It updates only the main window you edit and the non-main window
children of this main one.

Reviewers: sergey, brecht

Differential Revision: https://developer.blender.org/D4528